fix the new param
