# model/request/product.go
@@ -2,14 +2,17 @@ package request
 
 // nambahin validate pake validator v10
 type RequestCreateProduct struct {
-	Name string `json:"name" validate:"required,min=1,max=200"`
+	CategoryId int    `json:"category_id" validate:"required,numeric"`
+	Name       string `json:"name" validate:"required,min=1,max=200"`
 }
 
 type RequestUpdateProduct struct {
-	Id   int    `json:"id" validate:"required,numeric"`
-	Name string `json:"name" validate:"required,min=1,max=200"`
+	Id         int    `json:"id" validate:"required,numeric"`
+	CategoryId int    `json:"category_id" validate:"numeric"`
+	Name       string `json:"name" validate:"required,min=1,max=200"`
 }
 
 type RequestDeleteProduct struct {
-	Id int `json:"id" validate:"required,numeric"`
+	Id         int `json:"id" validate:"required,numeric"`
+	// CategoryId int `json:"id" validate:"required,numeric"`
 }
